src/test/ui/suggestions/invalid-bin-op.stderr
error[E0369]: binary operation `==` cannot be applied to type `S<T>`
  --> $DIR/invalid-bin-op.rs:2:15
   |
LL |     let _ = s == t;
   |             - ^^ - S<T>
   |             |
   |             S<T>
   |
note: an implementation of `PartialEq<_>` might be missing for `S<T>`
  --> $DIR/invalid-bin-op.rs:5:1
   |
LL | struct S<T>(T);
   | ^^^^^^^^^^^^^^^ must implement `PartialEq<_>`
   = note: the trait `std::cmp::PartialEq` is not implemented for `S<T>`
help: consider annotating `S<T>` with `#[derive(PartialEq)]`
   |
LL | #[derive(PartialEq)]
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
